--- a/src/components/VolumeHistory/VolumeHistory.module.scss
+++ b/src/components/VolumeHistory/VolumeHistory.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  margin: 5px 2rem;
+  margin: $default-page-margin;
 }
 
 .searchHolder {
