--- a/src/components/global.module.scss
+++ b/src/components/global.module.scss
@@ -27,7 +27,7 @@
   // border: 1px solid rgba(255, 255, 255, 0.18);
   // margin: 1rem;
   padding: 1rem;
-  max-width: 25vw;
+  // max-width: 25vw;
   min-width: 12rem;
   gap: 1rem;
   // transition: border 350ms ease 100ms, background-image 200ms ease;
@@ -42,12 +42,17 @@
 
 .radioForm {
   display: flex;
-  align-items: start;
-}
-
-.radioForm[type='radio'] {
-  display: grid;
-  place-content: center;
+  // align-items: start;
+  justify-content: center;
+  padding: 0.25rem 0rem;
+  // justify-content: space-around;
+  &[type='radio'] {
+    display: grid;
+    place-content: center;
+  }
+  label {
+    margin-right: 1rem;
+  }
 }
 
 .radioForm::before {
@@ -137,5 +142,35 @@
   }
   &--small {
     font-size: 1.15rem;
+  }
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  border: 1px solid #ddd;
+  font-size: 0.9rem;
+
+  thead {
+    position: sticky;
+    top: 0;
+    background-color: color(light, base);
+    th {
+      text-align: left;
+      color: color(background, dark);
+      padding: 0.5rem;
+      white-space: nowrap;
+      padding-right: 1rem;
+    }
+  }
+  tbody {
+    // display: block;
+  }
+  td {
+    padding: 0.5rem;
+  }
+  tr:nth-child(even) {
+    background-color: color(background, light);
   }
 }
